Yazılım sektörüne uygun beceri geliştirme ve tecrübe edinme alanı için görüntüleme düzenlendi.

--- a/index.html
+++ b/index.html
@@ -182,9 +182,10 @@
 								style="color: rgb(28, 0, 66);" data-appear-animation="fadeInUpShorter"
 								data-appear-animation-delay="300" style="animation-delay: 300ms;">
 								Coding Space Dönemi Başladı!</h1>
-							<h2 class=" font-weight-semibold text-6 line-height-3 mb-3 pe-5 me-5"
-								style="color: rgb(28, 0, 66);">
-								Yazılım sektörüne uygun beceri geliştirme ve tecrübe edinme alanı.</h2>
+							<h2 class=" font-weight-semibold text-6 line-height-3 mb-3 pe-5 me-5 appear-animation animated fadeInUpShorter appear-animation-visible"
+								style="color: rgb(28, 0, 66);" data-appear-animation="fadeInUpShorter"
+								data-appear-animation-delay="300" style="animation-delay: 300ms;"> 
+								Yazılım sektörüne uygun beceri geliştirme ve tecrübe edinme alanı </h2>
 							<p class="lead  text-5 appear-animation animated fadeInUpShorter appear-animation-visible"
 								style="color: rgb(28, 0, 66);" data-appear-animation="fadeInUpShorter"
 								data-appear-animation-delay="450" style="animation-delay: 450ms;">
@@ -193,7 +194,7 @@
 								geliştirir ve sektöre uygun tecrübe kazanırsınız. Bu sayede iş başvurularında sıkça
 								karşılaşılan tecrübe eksikliği sorununu en etkili şekilde çözmüş olursunuz.</p>
 							<a href="https://chat.whatsapp.com/IxqQNq0B7n0BftTNQ74b9v" target="_blank"
-								class="btn btn-gradient btn-rounded font-weight-semibold px-5 py-3 text-3 mb-md-5 mt-2  appear-animation"
+								class="btn btn-gradient btn-rounded font-weight-semibold px-5 py-3 text-3 mb-md-2 mt-2  appear-animation"
 								data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">Bekleme
 								Listesine Katıl!</a>
 							<div class="spacer d-none d-md-block" style="height: 0px;"></div>
