--- a/pricing.html
+++ b/pricing.html
@@ -206,7 +206,7 @@
 							</div>
 							<div class="overflow-hidden mb-4">
 								<h1 class="d-block text-color-quaternary font-weight-bold text-center line-height-4 mb-0 appear-animation"
-									data-appear-animation="maskUp" data-appear-animation-delay="1000">Abunelik Fiyatları
+									data-appear-animation="maskUp" data-appear-animation-delay="1000">Abonelik Fiyatları
 								</h1>
 							</div>
 						</div>
@@ -286,7 +286,7 @@
 							</div>
 							<div class="overflow-hidden mb-2">
 								<h2 class="font-weight-bold text-color-quaternary text-7 mb-0 appear-animation"
-									data-appear-animation="maskUp" data-appear-animation-delay="400">Abunelik Fiyatları
+									data-appear-animation="maskUp" data-appear-animation-delay="400">Abonelik Fiyatları
 								</h2>
 							</div>
 							<p class="appear-animation" data-appear-animation="fadeInUpShorter"
@@ -373,33 +373,23 @@
 								<thead>
 									<tr>
 										<th style="width: 34%;"></th>
-										<th style="width: 22%;">12 AY</th>
-										<th style="width: 22%;">18 AY</th>
-										<th style="width: 22%;">24 AY</th>
+										<th style="width: 22%;">Jr Paketi</th>
+										<th style="width: 22%;">JXP Paketi</th>
+										<th style="width: 22%;">JXP+ Paketi</th>
 									</tr>
 								</thead>
 								<tbody>
 									<tr>
 										<th scope="row" class="text-start">Public</th>
-										<td><svg class="bi" width="24" height="24">
-												<use xlink:href="#check"></use>
-											</svg></td>
-										<td><svg class="bi" width="24" height="24">
-												<use xlink:href="#check"></use>
-											</svg></td>
-										<td><svg class="bi" width="24" height="24">
-												<use xlink:href="#check"></use>
-											</svg></td>
+										<td></td>
+										<td></td>
+										<td></td>
 									</tr>
 									<tr>
 										<th scope="row" class="text-start">Private</th>
 										<td></td>
-										<td><svg class="bi" width="24" height="24">
-												<use xlink:href="#check"></use>
-											</svg></td>
-										<td><svg class="bi" width="24" height="24">
-												<use xlink:href="#check"></use>
-											</svg></td>
+										<td></td>
+										<td></td>
 									</tr>
 								</tbody>
 
