--- a/pricing.html
+++ b/pricing.html
@@ -7,15 +7,21 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Demo SEO 2 | Porto - Multipurpose Website Template</title>
+	<title>UniWorkHub</title>
+	
+	<meta name="keywords"
+		content="UniWorkHub, yazılım, okulu, kayseri, talas, türkiye, 01, 01edu, edu, okul, yazılım kursu, kayseri içi, code, kod, coding, coding space, uni" />
+	<meta name="description"
+		content="UniWorkHub'ta blokzinciri, yapay zeka, oyun geliştirme gibi popüler alanlarda yazılım geliştirmeyi öğrenerek hayallerinizin ötesinde bir kariyer fırsatı yakalayın.">
+	<meta name="author" content="UniWorkHub.com">
 
 	<meta name="keywords" content="WebSite Template" />
 	<meta name="description" content="Porto - Multipurpose Website Template">
 	<meta name="author" content="okler.net">
 
 	<!-- Favicon -->
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+	<link rel="apple-touch-icon" href="images/favicon.ico">
 
 	<!-- Mobile Metas -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
@@ -300,45 +306,68 @@
 							<div class="plan text-center appear-animation" data-appear-animation="fadeInUpShorter"
 								data-appear-animation-delay="550">
 								<div class="custom-dots-rect-5"
-									style="background-image: url(img/demos/seo-2/dots-group.png);"></div>
+									style="background-image: url(img/demos/seo-2/dots-group.png);">
+								</div>
 								<div class="plan-header bg-color-light pt-5 px-4">
+
 									<h4 class="text-color-dark font-weight-bold text-color-quaternary text-5 mt-4 mb-2">
 										12 AY</h4>
-									<p class="px-2 mb-0">Junior Developer</p>
+									<p class="px-2 mb-0 text-4  text-color-black">Junior Developer
+									<p class="text-4 text-color-black"> Programı</p>
+									</p>
+									<p class="text-5 font-weight-bold text-color-dark ">(Jr)</p>
 								</div>
 								<div class="plan-features px-4">
 									<ul>
-										<li class="text-5">12 Asgari Ücret</li>
-										<li><strong class="text-color-dark">Ödeme Planı</strong>
+
+										<li class="text-5 text-color-dark font-weight-bold ">Aylık 3.400 TL
+											<br>
+											<br>
+
 										</li>
-										<li><strong class="text-color dark">12</strong> Taksit</li>
-										<li><strong class="text-color-dark">20</strong> Email Accounts</li>
-										<li>Unlimited Subdomains</li>
+										<li><strong class="text-color-dark">İstihdam Sonrası Ödeme</strong>
+
+										</li>
+										<li class="text-5 text-color-dark ">
+											<div class="py-3"></div>
+											<strong class="my-5">12 Asgari Ücret</strong>
+											<div class="py-3"></div>
+										</li>
+
 									</ul>
 								</div>
 
 							</div>
 						</div>
 						<div class="col-md-8 col-lg-4">
-							<div class="plan plan-featured bg-color-light text-center appear-animation"
+							<div class="plan plan-featured bg-color-quaternary text-center appear-animation "
 								data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
-								<span class="plan-popular-tag text-color-black font-weight-bold">POPULAR</span>
-								<div class="plan-header bg-color-light pt-5 px-4">
-									<h4 class="text-color-black font-weight-bold text-5 mt-4 mb-2">18 AY</h4>
-									<p class="text-color-black font-weight-light opacity-6 px-2 mb-0">Junior Experienced
-										Developer Programı
-									<p class="text-5 font-weight-bold " style="background: -webkit-linear-gradient(left, red, orange, yellow, green, blue, indigo, violet); -webkit-background-clip: text;
-  color: transparent;">JXP</p>
+								<span class="plan-popular-tag text-color-light font-weight-bold">POPÜLER</span>
+								<div class="plan-header bg-color-quaternary pt-5 px-4">
+									<h4 class="text-color-light font-weight-bold text-5 mt-4 mb-2">18 AY</h4>
+									<p class="text-color-light font-weight-light  px-2 mb-0 text-4">Junior Experienced
+										Developer
+									<p class="text-4 text-color-light"> Programı</p>
+									<p class="text-5 font-weight-bold text-color-light">(JXP)</p>
 									</p>
 								</div>
 								<div class="plan-features px-4">
 									<ul>
-										<li class="text-5">18 Asgari Ücret</li>
-										<li><strong class="text-color-dark">Ödeme Planı</strong>
+										<li class="text-5 text-color-light font-weight-bold text-4">Aylık 3.400 TL
+											<br>
+											<br>
 										</li>
-										<li><strong class="text-color dark">12</strong> Taksit</li>
-										<li><strong class="text-color-dark">20</strong> Email Accounts</li>
-										<li>Unlimited Subdomains</li>
+										<li><strong class="text-color-light">İstihdam Sonrası Ödeme</strong>
+
+										</li>
+										<li class="text-5 text-color-light">
+											<span style='color:red;text-decoration:line-through'>
+												<span style='color:rgb(255, 255, 255);'>18 Asgari Ücret</span>
+											</span>
+											<br>
+											<strong class="text-color-light">15 Asgari Ücret</strong>
+										</li>
+
 									</ul>
 								</div>
 
@@ -347,27 +376,39 @@
 						<div class="col-md-8 col-lg-4">
 							<div class="plan text-center appear-animation" data-appear-animation="fadeInUpShorter"
 								data-appear-animation-delay="620">
-								<div class="plan-header bg-color-light pt-5 px-4">
-									<h4 class="text-color-dark font-weight-bold text-color-quaternary text-5 mt-4 mb-2">
+								<div class="plan-header bg-color-light  pt-5 px-4">
+									<h4 class="text-color-dark font-weight-bold  text-5 mt-4 mb-2">
 										24 AY</h4>
-									<p class="px-2 mb-0">Junior Experienced Plus Developer Programı (JXP+)</p>
+									<p class="px-2 mb-0 text-color-dark text-4 ">Junior Experienced Plus Developer
+									<p class="text-4 text-color-black"> Programı</p>
+									</p>
+									<p class="text-5 font-weight-bold text-color-dark">(JXP+)</p>
+									</p>
 								</div>
 								<div class="plan-features px-4">
 									<ul class="list-unstyled">
-										<li class="text-5">12 Asgari Ücret</li>
-										<li><strong class="text-color-dark">Ödeme Planı</strong>
+										<li class="text-5 text-color-dark font-weight-bold ">Aylık 3.400 TL
+											<br>
+											<br>
+
 										</li>
-										<li><strong class="text-color dark">12</strong> Taksit</li>
-										<li><strong class="text-color-dark">20</strong> Email Accounts</li>
-										<li>Unlimited Subdomains</li>
+										<li><strong class="text-color-dark">İstihdam Sonrası Ödeme</strong>
+
+										</li>
+										<li class="text-5 text-color-light">
+											<span style='color:red;text-decoration:line-through'>
+												<span style='color:rgb(0, 0, 0);'>24 Asgari Ücret</span>
+											</span>
+											<br>
+											<strong class="text-color-dark">18 Asgari Ücret</strong>
+										</li>
+
+
 									</ul>
 								</div>
-
-
-							</div>
-
+							</div> 
 						</div>
-						<h1 class="text-center">Karşılaştırma</h1>
+						<h1 class="text-center mt-4">Karşılaştırma</h1>
 						<div class="table-responsive">
 							<table class="table text-center">
 								<thead>
