--- a/index.html
+++ b/index.html
@@ -234,17 +234,17 @@
 						<div class="col">
 							<img width="100" height="78" src="images/Anatolia Logo beyaz.png" alt="">
 						</div>
-			
-			
+
+
 					</div>
 					<div class="row justify-content-center mb-3">
 						<div class="col-md-10 pb-8 mb-md-7">
-			
+
 							<h1 class="text-color-white font-weight-bold text-10 mb-3 appear-animation"
 								data-appear-animation="fadeInUpShorter" data-appear-animation-delay="300">Zamanınızı
 								Tecrübelere ve Becerilere Dönüştürün!</h1>
-							<p class="text-color-white text-4 mb-4 appear-animation" data-appear-animation="fadeInUpShorter"
-								data-appear-animation-delay="450">
+							<p class="text-color-white text-4 mb-4 appear-animation"
+								data-appear-animation="fadeInUpShorter" data-appear-animation-delay="450">
 								Yazılım eğitimlerinin genellikle teorik bilgiye dayalı olması,
 								mezunların sektörde çalışmaya hazır olmamalarına ve işsiz kalmalarına yol açıyor.
 								Sertifikalar CV'nize bazı avantajlar sağlayabilir, ancak genellikle
@@ -255,9 +255,9 @@
 								Space'te çalışarak elde edilir.</p>
 							<div class="spacer" style="height: 5px;"></div>
 						</div>
-			
+
 						<div class="row mt-lg-5 mb-4">
-			
+
 							<div class="col-lg-3 mt-3">
 								<a>
 									<span class="thumb-info thumb-info-no-borders thumb-info-no-borders-rounded">
@@ -271,7 +271,7 @@
 									</span>
 								</a>
 							</div>
-			
+
 							<div class="col-lg-3 mt-3">
 								<a>
 									<span class="thumb-info thumb-info-no-borders thumb-info-no-borders-rounded">
@@ -285,7 +285,7 @@
 									</span>
 								</a>
 							</div>
-			
+
 							<div class="col-lg-3 mt-3">
 								<a>
 									<span class="thumb-info thumb-info-no-borders thumb-info-no-borders-rounded">
@@ -295,12 +295,12 @@
 												<span class="thumb-info-inner">Team Meeting</span>
 												<span class="thumb-info-type">Coding Space</span>
 											</span>
-			
+
 										</span>
 									</span>
 								</a>
 							</div>
-			
+
 							<div class="col-lg-3 mt-3">
 								<a>
 									<span class="thumb-info thumb-info-no-borders thumb-info-no-borders-rounded">
@@ -310,7 +310,7 @@
 												<span class="thumb-info-inner">Sprint Planning</span>
 												<span class="thumb-info-type">Coding Space</span>
 											</span>
-			
+
 										</span>
 									</span>
 								</a>
@@ -320,7 +320,7 @@
 				</div>
 			</section>
 
-			<div class="section custom-bg-color-light-2 position-relative border-0 mb-5 pb-5">
+			<div class="section section-height-4 custom-bg-color-light-2 position-relative border-0  pb-4">
 
 				<div class="container position-relative z-index-1  ">
 					<div class="custom-circle custom-circle-small custom-circle-pos-14">
@@ -474,8 +474,8 @@
 
 		</div>
 	</div>
-	</section>
-	<section class="section section-height-5 bg-color-quaternary position-relative border-0 mt-5 ">
+	
+	<section class="section section-height-5 bg-color-quaternary position-relative border-0  ">
 		<svg class="custom-section-curved-top-4" width="100%" height="298" xmlns="http://www.w3.org/2000/svg">
 			<path id="svg_2" fill="#171940" stroke="#000" stroke-width="0"
 				d="m-16.68437,95.44889c0,0 5.33335,176.00075 660.00283,93.33373c327.33474,-41.33351 503.33549,15.3334 639.00274,35.66682c135.66725,20.33342 59.66691,9.66671 358.33487,28.33346c298.66795,18.66676 268.66829,-45.00088 382.66831,-112.00048c114.00002,-66.9996 718.31698,-59.48704 1221.66946,95.563c503.35248,155.05004 -221.83202,184.10564 -243.66935,197.60521c-21.83733,13.49958 -3008.67549,-19.83371 -3008.00467,-20.83335c-0.67082,0.99964 -30.00428,-232.33469 -10.00419,-317.66839z"
@@ -485,7 +485,7 @@
 			<div class="row justify-content-center mb-5">
 				<div class="col-md-10 pb-8 mb-md-7">
 
-					<h1 class="text-color-white font-weight-bold text-10 mb-3 appear-animation"
+					<h1 class="text-color-white text-center font-weight-bold text-10 mb-3 appear-animation"
 						data-appear-animation="fadeInUpShorter" data-appear-animation-delay="300">01 EDU Mezunlarının
 						İşe Girdiği Şirketler</h1>
 					<p class="text-color-white text-4 mb-4 appear-animation" data-appear-animation="fadeInUpShorter"
@@ -654,7 +654,7 @@
 				<div class="col-8 text-center">
 					<div class="overflow-hidden mb-0">
 					</div>
-					<div class="overflow-hidden mb-2">
+					<div class="overflow-hidden mb-5">
 						<h2 class="font-weight-bold text-color-quaternary text-9 mb-0 appear-animation animated maskUp appear-animation-visible"
 							data-appear-animation="maskUp" data-appear-animation-delay="350"
 							style="animation-delay: 350ms;">
@@ -925,7 +925,7 @@
 		<hr class="px-3">
 	</section>
 	<section class="section position-relative custom-bg-color-light-2 border-0 pt-2 pt-lg-2 m-0">
-	
+
 		<div class="container position-relative z-index-1 pb-lg-4 mb-lg-5">
 			<div class="custom-circle custom-circle-medium custom-circle-pos-44 appear-animation"
 				data-appear-animation="expandIn" data-appear-animation-delay="200">
@@ -947,7 +947,7 @@
 			</div>
 			<div class="row justify-content-center mb-3">
 				<div class="col-md-10 col-lg-8 text-center">
-	
+
 					<div class="overflow-hidden mb-2">
 						<h2 class="font-weight-bold text-color-quaternary text-7 mb-0 appear-animation"
 							data-appear-animation="maskUp" data-appear-animation-delay="400">Coding Space
@@ -969,7 +969,7 @@
 						<div class="custom-dots-rect-5" style="background-image: url(img/demos/seo-2/dots-group.png);">
 						</div>
 						<div class="plan-header bg-color-light pt-5 px-4">
-	
+
 							<h4 class="text-color-dark font-weight-bold text-color-quaternary text-5 mt-4 mb-2">
 								12 AY</h4>
 							<p class="px-2 mb-0 text-4  text-color-black">Junior Developer
@@ -985,13 +985,13 @@
 									<strong class="my-5">(12 Taksit)</strong>
 									<br>
 									<br>
-	
+
 								</li>
 								<li><strong class="text-color-dark">İşe Girdikten Sonraki Ödeme</strong>
-	
+
 								</li>
 								<li class="text-5 text-color-dark ">
-	
+
 									<strong class="my-5">9 Asgari Ücret</strong>
 									<br>
 									<strong class="my-5">(12 Taksit)</strong>
@@ -999,10 +999,10 @@
 									<p class="px-2 mb-0 text-1">Toplam 12 Asgari Ücret</p>
 									<!--<div class="py-3"></div>-->
 								</li>
-	
+
 							</ul>
 						</div>
-	
+
 					</div>
 				</div>
 				<div class="col-md-8 col-lg-4">
@@ -1027,20 +1027,20 @@
 									<br>
 								</li>
 								<li><strong class="text-color-light">İşe Girdikten Sonraki Ödeme</strong>
-	
+
 								</li>
 								<li class="text-5 text-color-light">
-	
+
 									<strong class="text-color-light">10 Asgari Ücret</strong>
 									<br>
 									<strong class="my-5">(12 Taksit)</strong>
 									<br>
 									<p class="px-2 mb-0 text-1 text-color-light">Toplam 15 Asgari Ücret</p>
 								</li>
-	
+
 							</ul>
 						</div>
-	
+
 					</div>
 				</div>
 				<div class="col-md-8 col-lg-4">
@@ -1063,28 +1063,28 @@
 									<strong class="my-5">(24 Taksit)</strong>
 									<br>
 									<br>
-	
+
 								</li>
 								<li><strong class="text-color-dark">İşe Girdikten Sonraki Ödeme</strong>
-	
+
 								</li>
 								<li class="text-5 text-color-light">
 									<!--	<span style='color:red;text-decoration:line-through'>
 											<span style='color:rgb(0, 0, 0);'>24 Asgari Ücret</span> 
 										</span>-->
-	
+
 									<strong class="text-color-dark">11 Asgari Ücret</strong>
 									<br>
 									<strong class="text-color-dark">(12 Taksit)</strong>
 									<br>
 									<p class="px-2 mb-0 text-1 text-color-dark">Toplam 18 Asgari Ücret</p>
 								</li>
-	
-	
+
+
 							</ul>
 						</div>
 					</div>
-	
+
 				</div>
 				<div class="row justify-content-center mb-5 mt-5">
 					<div class="col-auto">
@@ -1094,7 +1094,7 @@
 							İncele</a>
 					</div>
 				</div>
-	
+
 			</div>
 		</div>
 		<hr><br>
@@ -1117,7 +1117,7 @@
 					data-plugin-options="{'startPos': 'bottom', 'speed': 0.5, 'transition': true, 'transitionDuration': 1000}">
 				</div>
 			</div>
-	
+
 			<div class="container pb-2 ">
 				<div class="row justify-content-center">
 					<div class="col-md-10 col-lg-6 mb-5 mb-lg-0">
@@ -1133,23 +1133,23 @@
 							Erişilebilirlik ve kapsayıcılık ilkelerimiz doğrultusunda,
 							Coding Space'e 18 yaş ve üzerinde olan ve Kayseri'de ikamet eden bireyler katılabilir.
 							Ancak, tam zamanlı çalışanlar için uygun değildir.
-	
+
 						<div class="plan-features px-4">
 							<ul class="list-unstyled">
 								<li class="text-5 text-color-dark">Bölüm veya üniversite şartı yok!</li>
 								<br>
-	
+
 								<li class="text-5 text-color-dark">Önceden yazılım bilgisine ihtiyaç yok!</li>
-	
+
 							</ul>
 						</div>
-	
+
 						</p>
-	
-	
+
+
 					</div>
-	
-	
+
+
 					<div class="col-md-10 col-lg-6 mt-5 appear-animation" data-appear-animation="fadeInRightShorter"
 						data-appear-animation-delay="600">
 						<div class="row justify-content-center">
@@ -1161,8 +1161,8 @@
 					</div>
 				</div>
 			</div>
-	
-	
+
+
 			<div class="custom-circle custom-circle-big custom-circle-pos-20 appear-animation"
 				data-appear-animation="expandInWithBlur" data-appear-animation-delay="200"
 				data-appear-animation-duration="2s">
@@ -1319,9 +1319,9 @@
 		</div>
 
 	</section>
-	
+
 	<footer id="footer" class="bg-color-quaternary position-relative mt-0">
-		
+
 		<div class="container position-relative mt-0 mb-4">
 			<div class="row py-5">
 				<div class="col-lg-3 mb-5 mb-lg-0">
