--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
 				</svg>
 				<div class="container mb-2">
 					<div class="row justify-content-center mb-4">
-						<div class="col">
-							<img class="" width="100" height="100" src="images/01edu.png" alt="">
+						<div class="col ps-5">
+							<img width="100" height="100" src="images/01edu.png" alt="">
 						</div>
 						<div class="col pt-4">
 							<img width="150" height="38" src="images/coinoxs.png" alt="">
